# sorting_ws

./: .gitignore  README.md  Transport_ROS_Arduino_V1.ino
HMI/: #Sorting.glade#  Sorting.glade  gladeTest.py  glademethod.py  main.glade  main.py  myprogram.glade  test.py
Transport_ROS_Arduino_V1/: Transport_ROS_Arduino_V1.ino
src/depth-ai-avans/depthai_ros_msgs/srv/: camera.srv
src/depthai_ros_msgs/: CMakeLists.txt  package.xml
src/depthai_ros_msgs/srv/: camera.srv
src/hmi/: CMakeLists.txt  package.xml
src/hmi/launch/: hmi_launcher.launch
src/hmi/resource/: #robot-manager-panel.glade#  robot-manager-panel.glade  style.css
src/hmi/scripts/: console_handler.py  css_handler.py  hmi_controller.py  ros_handler.py
src/my_depthai/launch/: detectie.launch  nn_detector.launch
src/my_depthai/resources/: Mondhygiene_detectie.json  Tandenborstel_detectie.json
src/my_depthai/scripts/: Mondhygiene_detectie.py  mondhygiene_client.py  publisch_bouding_boxes.py
src/my_depthai/test/: CMakeLists.txt
src/my_depthai/test/scripts/: camera_info_test.py
src/my_xarm_lite6/my_demo/: CMakeLists.txt  package.xml
src/my_xarm_lite6/my_demo/action/: MoveToPose.action
src/my_xarm_lite6/my_demo/launch/: run_demo.launch  run_full_system.launch
src/my_xarm_lite6/my_demo/src/: robot_controller.py  robot_handler.py  run_pick.py  send_goal.py
src/my_xarm_lite6/my_lite6_bringup/launch/: xarm_driver_common.launch
src/my_xarm_lite6/my_lite6_description/meshes/: Gripper_Lite.stl  Gripper_Lite_old.stl  Gripper_Lite_rev2.stl  bin_holder.stl
src/my_xarm_lite6/my_lite6_description/urdf/: depthai_macro.urdf.xacro  lite6_robot.urdf.xacro  opstelling_robot.urdf.xacro
src/my_xarm_lite6/my_lite6_moveit_config/config/: controllers.yaml  lite6_robot.srdf
src/my_xarm_lite6/my_lite6_moveit_config/launch/: moveit.rviz  ros_controllers.launch
src/sorting/: CMakeLists.txt  package.xml
src/sorting/launch/: debugger.launch
src/sorting/msg/: light_indication.msg
src/sorting/scripts/: hmi_listener.py  sorting.py
src/sortingcel/: CMakeLists.txt  package.xml
src/sortingcel/launch/: debugger.launch  sortingcel_start.launch
src/sortingcel/scripts/: ROSHandler.py  camera_handler.py  hmi_listener.py  lightindication_handler.py  robot_handler.py  sortingcel.py  transfer_util.py  transport_handler.py
src/transport_controller/: CMakeLists.txt  package.xml
src/transport_controller/launch/: transport_system.launch
src/transport_controller/src/: Test_program_transportband.py  start_transport_server.py  transportband_handler.py
src/transportband/: CMakeLists.txt  package.xml
src/xarm_ros/git/: config  index  packed-refs
src/xarm_ros/git/modules/xarm_sdk/cxx/: index  packed-refs
src/xarm_ros/git/modules/xarm_sdk/cxx/objects/pack/: pack-86c31be9acde18fd5e6c715cb1fbc29959289b4e.idx  pack-86c31be9acde18fd5e6c715cb1fbc29959289b4e.pack
src/xarm_ros/git/modules/xarm_sdk/cxx/refs/heads/: master
src/xarm_ros/git/objects/pack/: pack-eeb8ba906c9543c1452e15a6a9f3ef71367e1788.idx
src/xarm_ros/git/refs/heads/: master
