<?xml version="1.0"?>
<package format="3">
  <name>depthai_ros_msgs</name>
  <version>2.6.4</version>
  <description>Package to keep interface independent of the driver</description>

  <maintainer email="sachin@luxonis.com">Sachin Guruswamy</maintainer>
  <author>Sachin Guruswamy</author>

  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies required for generating messages/services -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <!-- Compatibility -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
