<?xml version="1.0"?>
<package format="2">
  <name>transport_controller</name>
  <version>0.0.0</version>
  <description>Transportbandsysteem controller</description>

  <maintainer email="jouwmail@voorbeeld.com">Robbe van Eekelen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rosserial_python</depend>

  <export>
  </export>
</package>
