<?xml version="1.0"?>
<package format="2">
  <name>my_demo</name>
  <version>0.0.0</version>
  <description>The my_demo package</description>

  <maintainer email="gerard@todo.todo">gerard</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for messages, actions, and MoveIt interaction -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <!-- xarm_msgs lijkt niet nodig tenzij je specifiek die messages gebruikt -->
  <!-- <depend>xarm_msgs</depend> -->

  <export>
  </export>
</package>

